kdeutils (4:4.6.1-0r1) UNRELEASED; urgency=low

  * New upstream release:
    - fixes creation of DSA&ElGamal keys in kgpg (Closes: #597001)
  * Update installed files.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.

  [ George Kiagiadakis ]
  * Add myself to uploaders.
  * Bump build dependencies on other kde-sc components to version 4:4.6.
  * Add new kremotecontrol package and make kdelirc a transitional package.
  * Remove unused build dependency on libsnmp-dev.
  * Add build dependency on python-dev, needed for superkaramba.
  * s/KDE/KDE SC/ in all package descriptions.

  [ José Manuel Santamaría Lema ]
  * Remove package okteta.
  * Add package filelight.
  * Remove unused build dependency on libqca2-dev.
  * Bump build dependency on kde-sc-dev-latest to 4:4.6.1.
  * Bump S-V to 3.9.1; update Replaces/Breaks/Conflicts.
  * Add debhelper depends substvars to kdeutils and kdeutils-dbg.
  * Add lintian-overrides files.
  * Add myself to Uploaders.

  [ Pino Toscano ]
  * Use wildcard architectures:
    - kfreebsd-i386 kfreebsd-amd64 -> kfreebsd-any

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 31 Aug 2010 21:08:30 +0300

kdeutils (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Update email address
  * Update descriptions

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 14:21:55 +0200

kdeutils (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Bump pkg-kde-tools build dependency to (>= 0.9) for HTML_INSTALL_DIR
    switch and 3.0 (quilt) source format support.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.
  * Replace usr/share/doc/kde4 references with usr/share/doc/kde.
  * Drop quilt from Build-Depends, no longer needed for 3.0 (quilt).