@@ -1,8 +1,13 @@
 #!/usr/bin/make -f
 
-DEB_CMAKE_CUSTOM_FLAGS += -DINSTALL_PRINTER_APPLET:BOOL=TRUE
+dh = --with=python-support
 
-include /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk
+include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
-binary-install/printer-applet::
-	dh_pysupport -pprinter-applet
+override_dh_auto_configure:
+	$(overriden_command) -- -DINSTALL_PRINTER_APPLET:BOOL=TRUE
+
+.PHONY: override_dh_auto_test
+
+override_dh_strip:
+	$(overriden_command) --dbg-package=kdeutils-dbg
